delete movie and cancel active torrent

--- a/example.env
+++ b/example.env
@@ -10,6 +10,16 @@
 TMDB_API_KEY=your_tmdb_api_key_here
 
 # =============================================================================
+# Jackett Configuration
+# =============================================================================
+# Required: Jackett server URL (default: http://localhost:9117)
+JACKETT_URL=http://localhost:9117
+
+# Required: Jackett API key (get from Jackett web interface)
+# Go to http://localhost:9117 -> Configuration -> API Key
+JACKETT_API_KEY=your_jackett_api_key_here
+
+# =============================================================================
 # Server Configuration (Optional - defaults are used if not set)
 # =============================================================================
 # Port for the HTTP server (default: 8080)
@@ -45,10 +55,24 @@ TMDB_API_KEY=your_tmdb_api_key_here
 # CORS_ORIGINS=http://localhost:3000,https://yourdomain.com
 
 # =============================================================================
+# qBittorrent Configuration
+# =============================================================================
+# Required: qBittorrent WebUI URL (default: http://localhost:8081)
+QBITTORRENT_URL=http://localhost:8081
+
+# Required: qBittorrent WebUI username (default: admin)
+QBITTORRENT_USERNAME=admin
+
+# Required: qBittorrent WebUI password
+QBITTORRENT_PASSWORD=your_qbittorrent_password_here
+
+# Optional: Download directory (if not set, uses qBittorrent default)
+# QBITTORRENT_DOWNLOAD_DIR=/path/to/downloads
+
+# =============================================================================
 # External Service Configuration (Optional - for future features)
 # =============================================================================
-# Download service configuration (if implementing torrent/download features)
-# DOWNLOAD_DIR=/path/to/downloads
+# Legacy torrent client configuration (for future transmission support)
 # TORRENT_CLIENT_URL=http://localhost:9091/transmission/rpc
 
 # Notification service (if implementing notifications)
